tests/negative/Test19.sp
(* Same function definition *)
f:Void() {
	return ;
}

f:Int() {
	return 2;
}